@@ -413,7 +413,7 @@ constraint = Constraint [] Dynamic
 tacimpl t = TacImp [] Dynamic t
 
 data FnOpt = Inlinable -- always evaluate when simplifying
-           | TotalFn | PartialFn
+           | TotalFn | PartialFn | CoveringFn
            | Coinductive | AssertTotal
            | Dictionary -- type class dictionary, eval only when
                         -- a function argument, and further evaluation resutls
